# ADS_Autonomous-Lane-Detection

./: .gitignore  README.md  README_CORRECTED.md  claude_suggestion.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup_x11.sh  start_carla.sh
.claude/: INITIALIZATION_STRATEGY.md  SYNCHRONOUS_MODE_FIX.md
.devcontainer/: Dockerfile  devcontainer.json
.docs/: CLEANUP_SUMMARY.md  M1_QUICK_REFERENCE.md  MACOS_M1_SETUP.md  README.md  README_DISTRIBUTED.md  RESTRUCTURING_SUMMARY.md
archive/: SIWOO_MERGE_SUMMARY.md
carla/carla/: scene_layout.py
carla/docs/: bp_doc_gen.py  doc_gen.py  doc_gen_snipets.py
carla/examples/: draw_skeleton.py  generate_traffic.py  interpolate_camera.py  invertedai_traffic.py  lane_explorer.py  manual_control.py  no_rendering_mode.py  open3d_lidar.py  recorder_replay.py  sensor_synchronization.py  vehicle_doors_demo.py  vehicle_gallery.py  vehicle_lights_demo.py  visualize_multiple_sensors.py  visualize_radar.py
carla/test/: test_connection.py  test_raycast_sensor.py  test_vehicle_physics.py
carla/util/: apply_texture.py  change_map_layer.py  config.py  extract_spawn_points.py  manage_environment_objects.py  manage_traffic_light.py  recorder_comparer.py  show_crosswalks.py  show_junctions.py  show_recorder_file_info.py  show_topology.py  show_traffic_lights.py  spectator_transform.py  start_replaying.py
decision/: controller.py
detection/: detection_server.py
detection/core/: config.py
detection/detection_module/: detector.py
docs/: COMPLETE_REFACTORING_SUMMARY.md  DL_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REFACTORING_GUIDE.md  TERMINAL_DISPLAY_GUIDE.md
docs/legacy/: BANDWIDTH_OPTIMIZATION.md  CARLA_FIX.md  DEVCONTAINER_SETUP.md  DISTRIBUTED_ARCHITECTURE.md  DL_DETECTION_FIXED.md  FINAL_STRUCTURE.md  MODULAR_ARCHITECTURE.md  NEW_ARCHITECTURE.md  PACKAGE_SETUP.md  PYPROJECT_UPDATES.md  QUICKSTART_NEW_ARCHITECTURE.md  QUICK_START.md  REFACTORING_SUMMARY.md  RESTRUCTURING_SUMMARY.md  SHARED_MEMORY_IMPLEMENTATION.md  SHARED_MEMORY_QUICKSTART.md  SHARED_MEMORY_RETRY_IMPROVEMENT.md  SINGLE_PROCESS_REMOVAL.md  START_HERE.md  SUBJECT.md  TROUBLESHOOTING_WEB_CONTROLS.md  VISUALIZATION_GUIDE.md  WEB_VIEWER_CONTROLS.md  WEB_VIEWER_FEATURES_ADDED.md
lane_detection/: ARCHITECTURE_DECISION.md  README.md  SYSTEM_OVERVIEW.md  __init__.py  carla_interface.py  config.yaml  detection_server.py  main.py  main_distributed.py  main_distributed_v2.py  main_modular.py  main_original_backup.py  main_refactored.py  model.py  test_connection.py  test_setup.py
lane_detection/core/: config.py  factory.py  interfaces.py  models.py
lane_detection/deep_learning/: __init__.py  lane_net.py
lane_detection/integration/: communication.py  distributed_orchestrator.py  orchestrator.py  visualization.py
lane_detection/processing/: frame_processor.py  metrics_logger.py  pd_controller.py
lane_detection/scripts/: start_distributed_system.sh
lane_detection/tests/: test_setup.py
lane_detection/traditional/: cv_lane_detector.py
lane_detection/ui/: __init__.py  keyboard_handler.py  pygame_viewer.py  video_recorder.py
lane_detection/utils/: lane_analyzer.py  visualizer.py
simulation/: config.yaml  connection.py  main.py  main_distributed_v2.py  main_modular.py
simulation/integration/: __init__.py  communication.py  distributed_orchestrator.py  messages.py  orchestrator.py  visualization.py
simulation/processing/: __init__.py  frame_processor.py  metrics_logger.py  pd_controller.py
simulation/ui/: web_viewer.py
simulation/utils/: __init__.py  lane_analyzer.py  spectator_overlay.py  visualizer.py
temp/: benchmark_performance.py  demo_refactored_architecture.py  example_refactored_usage.py
(+135 files in other folders)
